cambios del portfolio

--- a/index.html
+++ b/index.html
@@ -13,13 +13,13 @@
 <!-- Header / Presentación -->
 <header class="header">
     <h1>Mailen Cantarutti</h1>
-    <p>Front End Developer 🚀 | HTML, CSS & JavaScript | UX/UI</p>
+    <p>Front End Developer 🚀 | HTML, CSS & JavaScript | React </p>
 </header>
 
 <!-- Sobre mí -->
 <section id="about" class="about">
     <h2>Sobre mí</h2>
-    <p>Soy desarrolladora Front End con enfoque en UX/UI. Me apasiona crear experiencias digitales modernas, funcionales e intuitivas, transformando ideas en interfaces atractivas y fáciles de usar.</p>
+    <p>Soy desarrolladora Front End. Me apasiona crear experiencias digitales modernas, funcionales e intuitivas, transformando ideas en interfaces atractivas y fáciles de usar.</p>
 </section>
 
 <!-- Skills -->
@@ -39,22 +39,29 @@
     <h2>Proyectos</h2>
     <div class="project-list">
         <div class="project-card">
-            <img src="images/task-manager.png" alt="Task Manager App">
-            <h3>Task Manager App</h3>
-            <p>App para organizar tareas diarias con HTML, CSS y JS. Interfaz intuitiva y funcional.</p>
+            <img src="images/acoplados.png" alt="imagen de la app de acoplados salto">
+            <h3>Sitio web institucional – Empresa metalúrgica</h3>
+            <p>
+                Tecnologia: Sitio web institucional desarrollado con HTML y CSS, orientado a la presentación corporativa de la empresa.
+                Desarrollo: Implementé una estructura modular con páginas independientes (Inicio, Empresa, Productos, Novedades y Contacto), con una navegación intuitiva y un diseño adaptable.
+                Utilicé HTML semántico para mejorar el SEO y CSS Flexbox para la maquetación y el diseño responsive, logrando una correcta visualización también en la versión mobile. </p>
             <div class="project-links">
-                <a href="https://github.com/tuusuario/task-manager" target="_blank">GitHub</a>
-                <a href="https://tuusuario.github.io/task-manager/" target="_blank">Live Demo</a>
+                <a href="https://github.com/Mailencantarutti/acopladosalto" target="_blank">GitHub</a>
+                <a href="https://mailencantarutti.github.io/acopladosalto/" target="_blank">Live Demo</a>
             </div>
         </div>
 
         <div class="project-card">
-            <img src="images/portfolio.png" alt="Portfolio Personal">
-            <h3>Portfolio Personal</h3>
-            <p>Portfolio web mostrando mis proyectos y habilidades en Front End puro.</p>
+            <img src="images/turnos.png" alt="imagen de la app del portal de turnos">
+            <h3>Portal de Gestión de Turnos - Nutricionista</h3>
+            <p>
+                Tecnologías:Sitio web interactivo desarrollado con HTML5, CSS3 y JavaScript, integrando notificaciones con SweetAlert.
+                Desarrollo: Cree un portal interactivo donde los pacientes pueden registrar sus datos y seleccionar turnos mediante un calendario dinámico. El sistema confirma la reserva con notificaciones visuales y permite cancelar turnos si es necesario.
+                Experiencia de usuario, interfaz clara e intuitiva, manejo dinámico del DOM y buenas prácticas de desarrollo front-end.
+            </p>
             <div class="project-links">
-                <a href="https://github.com/tuusuario/portfolio" target="_blank">GitHub</a>
-                <a href="https://tuusuario.github.io/portfolio/" target="_blank">Live Demo</a>
+                <a href="https://github.com/Mailencantarutti/javascript-proyecto"target="_blank">GitHub</a>
+                <a href="https://mailencantarutti.github.io/javascript-proyecto/" target="_blank">Live Demo</a>
             </div>
         </div>
     </div>
@@ -63,9 +70,9 @@
 <!-- Contacto -->
 <section id="contact" class="contact">
     <h2>Contacto</h2>
-    <p>Email: <a href="mailto:mailen.dev@gmail.com">mailen.dev@gmail.com</a></p>
+    <p>Email: <a href="cantaruttimai@gmail.com">cantaruttimai@gmail.com</a></p>
     <p>LinkedIn: <a href="https://www.linkedin.com/in/mailencantarutti" target="_blank">linkedin.com/in/mailencantarutti</a></p>
-    <p>GitHub: <a href="https://github.com/tuusuario" target="_blank">github.com/tuusuario</a></p>
+    <p>GitHub: <a href="https://github.com/Mailencantarutti" target="_blank">github.com/MailenCantarutti</a></p>
 </section>
 
 <script src="js/main.js"></script>
