--- a/index.html
+++ b/index.html
@@ -7,30 +7,35 @@
     <link rel="stylesheet" href="css/styles.css">
     <!-- Google Fonts -->
     <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;700&display=swap" rel="stylesheet">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css"/>
 </head>
 <body>
 
+<!-- Banner -->
+<div class="banner">
+    <img src="images/banner.png" alt="Banner principal de portfolio">
+</div>
+
 <!-- Header / Presentación -->
 <header class="header">
-    <h1>Mailen Cantarutti</h1>
-    <p>Front End Developer 🚀 | HTML, CSS & JavaScript | React </p>
+    <h1>HTML, CSS & JavaScript | React 🚀  </h1>
 </header>
 
 <!-- Sobre mí -->
 <section id="about" class="about">
     <h2>Sobre mí</h2>
-    <p>Soy desarrolladora Front End. Me apasiona crear experiencias digitales modernas, funcionales e intuitivas, transformando ideas en interfaces atractivas y fáciles de usar.</p>
-</section>
-
-<!-- Skills -->
-<section id="skills" class="skills">
-    <h2>Skills</h2>
-    <div class="skill-icons">
-        <img src="icons/html5.png" alt="HTML5" title="HTML5">
-        <img src="icons/css3.png" alt="CSS3" title="CSS3">
-        <img src="icons/javascript.png" alt="JavaScript" title="JavaScript">
-        <img src="icons/github.png" alt="GitHub" title="GitHub">
-        <img src="icons/figma.png" alt="Figma" title="Figma UX/UI">
+    <div class="about-container">
+        <div class="about-text">
+            <div class="about-item">👋 ¡Hola! Soy desarrolladora web con enfoque en la creación de experiencias digitales modernas, funcionales y centradas en el usuario.</div>
+            <div class="about-item">❤️Me apasiona transformar ideas en interfaces intuitivas, combinando código limpio con un diseño atractivo.</div>
+            <div class="about-item">💻 Trabajo con HTML, CSS, JavaScript y React, desarrollando aplicaciones dinámicas que integran usabilidad, rendimiento y una experiencia de usuario fluida.</div>
+            <div class="about-item">🎨 Tengo una visión enfocada en UX/UI, buscando siempre el equilibrio entre estética y funcionalidad.</div>
+            <div class="about-item">🚀 Disfruto los desafíos que implican construir soluciones escalables, optimizar procesos y seguir aprendiendo cada día dentro del mundo del desarrollo front-end.</div>
+            <div class="about-item">✨ Mi objetivo: crear productos digitales que conecten con las personas y aporten valor real.</div>
+        </div>
+        <div class="about-img">
+            <img src="images/perfil.jpg" alt="Foto de Perfil" class="profile-img">
+        </div>
     </div>
 </section>
 
@@ -42,9 +47,12 @@
             <img src="images/acoplados.png" alt="imagen de la app de acoplados salto">
             <h3>Sitio web institucional – Empresa metalúrgica</h3>
             <p>
-                Tecnologia: Sitio web institucional desarrollado con HTML y CSS, orientado a la presentación corporativa de la empresa.
-                Desarrollo: Implementé una estructura modular con páginas independientes (Inicio, Empresa, Productos, Novedades y Contacto), con una navegación intuitiva y un diseño adaptable.
-                Utilicé HTML semántico para mejorar el SEO y CSS Flexbox para la maquetación y el diseño responsive, logrando una correcta visualización también en la versión mobile. </p>
+                💻 Tecnologías: Sitio web institucional desarrollado con HTML y CSS, orientado a la presentación corporativa de la empresa.
+            </p>
+            <p>
+                🚀 Desarrollo: Implementé una estructura modular con páginas independientes (Inicio, Empresa, Productos, Novedades y Contacto), con una navegación intuitiva y un diseño adaptable.
+                Utilicé HTML semántico para mejorar el SEO y CSS Flexbox para la maquetación y el diseño responsive, logrando una correcta visualización en la versión mobile. 
+            </p>
             <div class="project-links">
                 <a href="https://github.com/Mailencantarutti/acopladosalto" target="_blank">GitHub</a>
                 <a href="https://mailencantarutti.github.io/acopladosalto/" target="_blank">Live Demo</a>
@@ -55,8 +63,10 @@
             <img src="images/turnos.png" alt="imagen de la app del portal de turnos">
             <h3>Portal de Gestión de Turnos - Nutricionista</h3>
             <p>
-                Tecnologías:Sitio web interactivo desarrollado con HTML5, CSS3 y JavaScript, integrando notificaciones con SweetAlert.
-                Desarrollo: Cree un portal interactivo donde los pacientes pueden registrar sus datos y seleccionar turnos mediante un calendario dinámico. El sistema confirma la reserva con notificaciones visuales y permite cancelar turnos si es necesario.
+                💻 Tecnologías: Sitio web interactivo desarrollado con HTML5, CSS3 y JavaScript, integrando notificaciones con SweetAlert.
+            </p>
+            <p>   
+                🚀 Desarrollo: Cree un portal interactivo donde los pacientes pueden registrar sus datos y seleccionar turnos mediante un calendario dinámico. El sistema confirma la reserva con notificaciones visuales y permite cancelar turnos si es necesario.
                 Experiencia de usuario, interfaz clara e intuitiva, manejo dinámico del DOM y buenas prácticas de desarrollo front-end.
             </p>
             <div class="project-links">
@@ -64,16 +74,58 @@
                 <a href="https://mailencantarutti.github.io/javascript-proyecto/" target="_blank">Live Demo</a>
             </div>
         </div>
+
+        <div class="project-card">
+            <img src="images/reactapp.png" alt="Proyecto de React">
+            <h3>E-commerce de Hamburguesas – Carrito de Compras</h3>
+            <p>
+                💻 Tecnologías: React, HTML, CSS, JavaScript y APIs externas.
+            </p>
+            <p>
+                🚀 Desarrollo: Implementé un carrito de compras dinámico para un e-commerce de hamburguesas, con selección de productos, gestión de cantidades, almacenamiento de datos en localStorage y actualización en tiempo real del total. La interfaz es interactiva y responsive.
+            </p>
+            <p>
+                🔜 Próximamente Live Demo
+            </p>
+        </div>
+        </div>
+</section>
+
+<!-- Certificados -->
+<section id="certificates" class="certificates">
+    <h2>Certificados</h2>
+    <div class="certificate-list">
+        <div class="certificate-card">
+            <img src="images/desarrolloweb2.jpg" alt="Certificado 1" class="certificate-img">
+            <p>Curso de Desarrollo Web desde Cero – Universidad Nacional de la Matanza</p>
+        </div>
+        <div class="certificate-card">
+            <img src="images/desarrolloweb.jpg" alt="Certificado 2" class="certificate-img">
+            <p>Curso de HTML y CSS – Plataforma CoderHouse</p>
+        </div>
+        <div class="certificate-card">
+            <img src="images/javascript.jpg" alt="Certificado 3" class="certificate-img">
+            <p>Curso de JavaScript – Plataforma CoderHouse</p>
+        </div>
     </div>
 </section>
 
-<!-- Contacto -->
-<section id="contact" class="contact">
-    <h2>Contacto</h2>
-    <p>Email: <a href="cantaruttimai@gmail.com">cantaruttimai@gmail.com</a></p>
-    <p>LinkedIn: <a href="https://www.linkedin.com/in/mailencantarutti" target="_blank">linkedin.com/in/mailencantarutti</a></p>
-    <p>GitHub: <a href="https://github.com/Mailencantarutti" target="_blank">github.com/MailenCantarutti</a></p>
-</section>
+<!-- Lightbox -->
+<div id="lightbox" class="lightbox">
+    <span class="close">&times;</span>
+    <img class="lightbox-img" src="" alt="Certificado ampliado">
+</div>
+
+<!-- Bloque de contacto -->
+<div class="contact">
+  <h2>Contacto</h2>
+  <ul>
+    <li><i class="fas fa-envelope"></i> <a href="mailto:cantaruttimai@gmail.com">cantaruttimai@gmail.com</a></li>
+    <li><i class="fas fa-phone"></i> <a href="tel:+541112345678">+54 11 6245-8133</a></li>
+    <li><i class="fab fa-linkedin"></i> <a href="https://linkedin.com/in/mailencantarutti" target="_blank">linkedin.com/in/mailencantarutti</a></li>
+    <li><i class="fab fa-github"></i> <a href="https://github.com/MailenCantarutti" target="_blank">github.com/MailenCantarutti</a></li>
+  </ul>
+</div>
 
 <script src="js/main.js"></script>
 </body>
