--- a/index.html
+++ b/index.html
@@ -76,7 +76,7 @@
         </div>
 
         <div class="project-card">
-            <img src="images/reactapp.png" alt="Proyecto de React">
+            <img src="images/react.png" alt="Proyecto de React">
             <h3>E-commerce de Hamburguesas – Carrito de Compras</h3>
             <p>
                 💻 Tecnologías: React, HTML, CSS, JavaScript y APIs externas.
