Agregue proyecto React

--- a/index.html
+++ b/index.html
@@ -84,9 +84,10 @@
             <p>
                 🚀 Desarrollo: Implementé un carrito de compras dinámico para un e-commerce de hamburguesas, con selección de productos, gestión de cantidades, almacenamiento de datos en localStorage y actualización en tiempo real del total. La interfaz es interactiva y responsive.
             </p>
-            <p>
-                🔜 Próximamente Live Demo
-            </p>
+            <div class="project-links">
+                <a href="https://github.com/Mailencantarutti/react-mailen"target="_blank">GitHub</a>
+                <a href="https://react-mailen.vercel.app/" target="_blank">Live Demo</a>
+            </div>
         </div>
         </div>
 </section>
@@ -106,6 +107,10 @@
         <div class="certificate-card">
             <img src="images/javascript.jpg" alt="Certificado 3" class="certificate-img">
             <p>Curso de JavaScript – Plataforma CoderHouse</p>
+        </div>
+        <div class="certificate-card">
+            <img src="images/react1.png" alt="Certificado 4" class="certificate-img">
+            <p>Curso de React Js – Plataforma CoderHouse</p>
         </div>
     </div>
 </section>
